PeerGroup: Move maxOfMostFreq() from Utils to here, as here is the only usage.
(cherry picked from commit 924e525d52053e08dfb81cdda1f7c14b93cf42c0)